welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:7: error: illegal start of simple expression
    if()
       ^DwarfCode:8: error: ')' expected but '}' found.
  }
  ^