welcome.lessons.welcome.summative.Moria.scala.code

def go(){
  droite()
  droite()
  while(!estSurBiscuit()){
    avance()
    if()
  }
  prendBiscuit()
}

def stop(){
  droite()
  droite()
  while(!estSurBiscuit()){
    avance()
  }
  recule()
  poseBiscuit()
  recule()
}

def sortie(){
  droite()
  avance()
  gauche()
  avance()
}


while(!estFaceMur()){
	go()
  stop()
}
sortie()
